--- a/submitform.html
+++ b/submitform.html
@@ -7,7 +7,11 @@ div {
 	padding: 20px;
 	margin: 50px;
 	text-transform: uppercase;
-	background-color: #ffffff;
+	background-color: #2C001E;
+
+	min-width: 400px;
+	min-height: 200px;
+	border-style: none;
 
 /*AEA79F
 2C001E*/
