--- a/routesSchedules.html
+++ b/routesSchedules.html
@@ -1,4 +1,141 @@
-<ul>
+
+
+<!DOCTYPE html>
+<html>
+<style type="text/css">
+
+h1{
+	float: left;
+	color: #DD4814;
+	height: 107px;
+	text-transform: 100%;
+	background-repeat: no-repeat;
+	padding-left: 20px;
+}
+
+h3 {
+	font-size: 20px;
+}
+
+div.clear {
+	clear: both;
+}
+
+ul{
+	padding: 0px;
+	margin: 0px;
+}
+section.centerBoxes{
+	min-width: 1020px;
+}
+
+li.job {
+	border: 4px solid #772953;
+	width: 292px;
+	height: 258px;
+	list-style-type: none;
+	float: left;
+	padding: 20px;
+	background-color: #2C001E;
+	color: #ffffff;
+}
+
+header {
+	max-width: 999px;
+	background-color: #2C001E;
+	border: 5px solid #772953;
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 32px;
+	font-weight: bold;
+	margin: 0px;
+	padding: 0px;
+	max-height: 150px;
+	float: left;
+	min-width: 999px;
+	background-image: url(../../static/honeycomb.png);
+	background-repeat: no-repeat;
+	background-position: 790px -10px; 
+	margin-bottom: 10px;
+}
+
+footer {
+	max-width: 999px;
+	background-color: #2C001E;
+	border: 5px solid #772953;
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+	margin-top: 10px;
+	padding: 50px;
+	width: 910px;
+	background-repeat: no-repeat;
+}
+
+aside {
+	padding-top: 25px;
+	padding-bottom: 15px;
+	min-height: 45px;
+	background-color: #ffffff;
+	display: inline-block;
+}
+
+li.social a {
+	float: right;
+	max-height: 30px;
+	max-width: 25px;
+	padding: 0px;
+	margin-right: 0px;
+	background-color: none;
+	border-style: none;
+}
+
+ul{
+	list-style-type: none;
+	margin-top: -40px;
+}
+
+ul.feature{
+	margin-top: -25px; 
+	margin-left: 0px;
+	padding: 15px;
+	padding-top: 0px;
+	min-width: 999px;
+}
+
+
+
+
+h2{
+	text-transform: uppercase;
+	font-size: 26px;
+	padding: 20px;
+}
+
+a{
+	color: #ffffff;
+	background-color: #772953;
+	padding: 5px 15px;
+	border-style: ridge;
+	border-color: #AEA79F;
+	border-size: 3px;
+	margin: 15px;
+}
+
+p{
+	color: #AEA79F;
+	float: left;
+	padding: 0px;
+}
+
+
+</style>
+
+<head>
+	<title>Train Schedule</title>
+</head>
+<body>
+	<ul>
 	<li>
 		<h2>
 			1, Broadway - 7 Avenue Local
@@ -7,7 +144,7 @@
 		<p>	
 			Trains operate between 242 St in the Bronx and South Ferry in Manhattan, most times
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/t1cur.pdf,EE352E,">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t1cur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
@@ -15,7 +152,7 @@
 		</h2>
 		<p>Trains operate between Wakefield-241 St, Bronx, and Flatbush Av-Brooklyn College, Brooklyn, at all times. Trains operate local in Bronx and Brooklyn. Trains operate express in Manhattan except late night when it operates local.
 		</p>
-		<a href="	http://www.mta.info/nyct/service/pdf/t2cur.pdf,EE352E,">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t2cur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
@@ -24,7 +161,7 @@
 		<p>
 			Trains operate between 148 St, 7 Av, Manhattan, and New Lots Av, Brooklyn, at all times except late nights. During late nights, trains operate only in Manhattan between 148 St, 7 Av and Times Square-42 St.
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/t3cur.pdf,EE352E">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t3cur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
@@ -33,7 +170,7 @@
 		<p>
 			Trains operate daily between Woodlawn/Jerome Av, Bronx, and Utica Av/Eastern Pkwy, Brooklyn, running express in Manhattan and Brooklyn. During late night and early morning hours, trains runs local in Manhattan and Brooklyn, and extends beyond Utica Av to New Lots/Livonia Avs, Brooklyn.
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/t4cur.pdf,00933C">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t4cur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
@@ -42,7 +179,7 @@
 		<p>	
 			Weekdays daytime, most trains operate between either Dyre Av or 238 St-Nereid Av, Bronx, and Flatbush Av-Brooklyn College, Brooklyn. At all other times except during late nights, trains operate between Dyre Av, Bronx, and Bowling Green, Manhattan. During late nights trains operate only in the Bronx between Dyre Av and E 180 St/MorrisPark Av. Customers who ride during late night hours can transfer to 2 service at the E 180 St Station. At all times, trains operate express in Manhattan and Brooklyn. Weekdays, trains in the Bronx operate express from E 180 St to 149 St-3 Av during morning rush hours (from about 6 AM to 9 AM), and from 149 St-3 Av to E 180 St during the evening rush hours (from about 4 PM to 7 PM).
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/t5cur.pdf,00933C">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t5cur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
@@ -51,7 +188,7 @@
 		<p>
 			Local trains operate between Pelham Bay Park/Bruckner Express Way, Bronx, and Brooklyn Bridge/City Hall, Manhattan, at all times.
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/t6cur.pdf,00933C">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t6cur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
@@ -60,14 +197,14 @@
 		<p>
 			Trains operate between Main St-Flushing, Queens, and 42 St-Times Square, Manhattan, at all times.		
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/t7cur.pdf,B933AD">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t7cur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>A, 8 Avenue Express</h2>
 		<p>
 			Trains operate between Inwood-207 St, Manhattan and Franklin Rockaway-Mott Avenue, Queens at all times. Also from about 6 AM until about midnight, additional trains operate between Inwood-207 St and Lefferts Boulevard (trains typically alternate between Lefferts Blvd and Far Rockaway). During weekday morning rush hours, special trains, denoted in the schedule by a diamond symbol, operate from Rockaway Park-Beach 116 St, Queens, toward Manhattan. These trains make local stops between Rockaway Park and Broad Channel. Similarly, in the evening rush hour special trains leave Manhattan operating toward Rockaway Park-Beach 116 St, Queens.
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/tacur.pdf,2850AD,FFFFFF">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tacur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
@@ -76,158 +213,159 @@
 		<p>
 			Trains operate, weekdays only, between 145 St, Manhattan, and Brighton Beach, Brooklyn at all times except late nights. The route extends to Bedford Park Blvd, Bronx, during rush hours.
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/tbcur.pdf,FF6319,">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tbcur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>C, 8 Avenue Local</h2>
 		<p>Trains operate between 168 St, Manhattan, and Euclid Av, Brooklyn, daily from about 6 AM to 11 PM.</p>		
-		<a href="http://www.mta.info/nyct/service/pdf/tccur.pdf,2850AD,FFFFFF"></a>	
+		<a href="http://www.mta.info/nyct/service/pdf/tccur.pdf"></a>	
 	</li>
 	<li>
 		<h2>D, 6 Avenue Express</h2>
 		<p>
 			Trains operate, at all times, from 205 Street, Bronx, to Stillwell Avenue, Brooklyn via Central Park West and 6th Avenue in Manhattan, and via the Manhattan Bridge to and from Brooklyn. When in Brooklyn trains operate via 4th Avenue then through Bensonhurst to Coney Island. Trains typically operate local in the Bronx, express in Manhattan, and local in Brooklyn. But please note that Bronx rush hour trains operate express (peak direction ONLY), and Brooklyn trains operate express along the 4th Avenue segment (all times except late nights).
 		</p>
-		<a href="http://www.mta.info/nyct/service/pdf/tdcur.pdf,FF6319">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tdcur.pdf">Learn More</a>
 	</li>
 	<li>
 		<h2>
-			
+			E, 8 Avenue Local
 		</h2>
 		<p>
-			
+			Trains operate between Jamaica Center (Parsons/Archer), Queens, and World Trade Center, Manhattan, at all times.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tecur.pdf">Learn More</a>
 	</li>
 
-E, 8 Avenue Local,1,"Trains operate between Jamaica Center (Parsons/Archer), Queens, and World Trade Center, Manhattan, at all times.",http://www.mta.info/nyct/service/pdf/tecur.pdf,2850AD,FFFFFF
 	<li>
 		<h2>
-			
+			F, Queens Blvd Express/ 6 Av Local
 		</h2>
 		<p>
-			
+			Trains operate at all times between Jamaica, Queens, and Stillwell Av, Brooklyn via the 63 St Connector (serving 21 St-Queensbridge, Roosevelt Island, Lexington Av-63 St, and 57 St-6 Av). F trains operate express along Queens Blvd at all times. Trains do not serve Queens Plaza, 23 St-Ely Av, Lexington Av-53 St and 5 Av-53 St.			
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tfcur.pdf">Learn More</a>
 	</li>
-F, Queens Blvd Express/ 6 Av Local,1,"Trains operate at all times between Jamaica, Queens, and Stillwell Av, Brooklyn via the 63 St Connector (serving 21 St-Queensbridge, Roosevelt Island, Lexington Av-63 St, and 57 St-6 Av). F trains operate express along Queens Blvd at all times. Trains do not serve Queens Plaza, 23 St-Ely Av, Lexington Av-53 St and 5 Av-53 St.",http://www.mta.info/nyct/service/pdf/tfcur.pdf,FF6319,
+
 	<li>
 		<h2>
-			
+			G, Brooklyn-Queens Crosstown
 		</h2>
 		<p>
-			
+			Trains operate between Court Square, Queens and Church Av, Brooklyn weekdays, and all weekend. Weekday evenings and late nights, trains operate between Forest Hill-71 Av, Queens and Church Av, Brooklyn.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tgcur.pdf">Learn More</a>
 	</li>
-G, Brooklyn-Queens Crosstown,1,"Trains operate between Court Square, Queens and Church Av, Brooklyn weekdays, and all weekend. Weekday evenings and late nights, trains operate between Forest Hill-71 Av, Queens and Church Av, Brooklyn.",http://www.mta.info/nyct/service/pdf/tgcur.pdf,6CBE45,
+
 	<li>
 		<h2>
-			
+			S, Franklin Avenue Shuttle,1
 		</h2>
 		<p>
-			
+			Train provides full time connecting service between the A and C at the Franklin Av/Fulton St station, and the Q at the Prospect Park/Empire Blvd station. A free transfer is also available at the Botanic Garden/Eastern Parkway Station to the 2, 3, 4, and 5 service.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tscur.pdf">Learn More</a>
 	</li>
-S, Franklin Avenue Shuttle,1,"Train provides full time connecting service between the A and C at the Franklin Av/Fulton St station, and the Q at the Prospect Park/Empire Blvd station. A free transfer is also available at the Botanic Garden/Eastern Parkway Station to the 2, 3, 4, and 5 service.",http://www.mta.info/nyct/service/pdf/tscur.pdf,,
+
 	<li>
 		<h2>
-			
+			S, 42 St Shuttle,1
 		</h2>
 		<p>
-			
+			Operates in Manhattan between Grand Central and Times Square. The shuttle provides a free transfer between 4, 5, 6, and 7 service at Grand Central-42 St and A, C, E, N, Q, R, W, 1, 2, 3, and 7 service at Times Square-42 St. The shuttle runs at all times except during late nights, from about 12 midnight to 6 AM.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/t0cur.pdf">Learn More</a>
 	</li>
-S, 42 St Shuttle,1,"Operates in Manhattan between Grand Central and Times Square. The shuttle provides a free transfer between 4, 5, 6, and 7 service at Grand Central-42 St and A, C, E, N, Q, R, W, 1, 2, 3, and 7 service at Times Square-42 St. The shuttle runs at all times except during late nights, from about 12 midnight to 6 AM.",http://www.mta.info/nyct/service/pdf/t0cur.pdf,6D6E71,
+
 	<li>
 		<h2>
-			
+			S, Rockaway Park Shuttle
 		</h2>
 		<p>
-			
+			Service operates at all times between Broad Channel, and Rockaway Park, Queens.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/thcur.pdf">Learn More</a>
 	</li>
-S, Rockaway Park Shuttle,1,"Service operates at all times between Broad Channel, and Rockaway Park, Queens.",http://www.mta.info/nyct/service/pdf/thcur.pdf,,
+
 	<li>
 		<h2>
-			
+			SIR, Staten Island Railway
 		</h2>
 		<p>
-			
+			Service runs 24 hours a day between the St George and Tottenville terminals. At the St George terminal, customers can make connections with Staten Island Ferry service to Manhattan.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/sircur.pdf">Learn More</a>
 	</li>
-SIR, Staten Island Railway,2,"Service runs 24 hours a day between the St George and Tottenville terminals. At the St George terminal, customers can make connections with Staten Island Ferry service to Manhattan.",http://www.mta.info/nyct/service/pdf/sircur.pdf,,
+
 	<li>
 		<h2>
-			
+			J, Nassau St Local
 		</h2>
 		<p>
-			
+			Trains operate weekdays between Jamaica Center (Parsons/Archer), Queens, and Broad St, Manhattan. During weekdays, Trains going to Manhattan run express in Brooklyn between Myrtle Av and Marcy Av from about 7 AM to 1 PM and from Manhattan from 1:30 PM and 8 PM. During weekday rush hours, trains provide skip-stop service. Skip-stop service means that some stations are served by J trains, some stations are served by the Z trains, and some stations are served by both J and Z trains. J/Z skip-stop service runs towards Manhattan from about 7 AM to 8:15 AM and from Manhattan from about 4:30 PM to 5:45 PM.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tjcur.pdf">Learn More</a>
 	</li>
-J, Nassau St Local,1,"Trains operate weekdays between Jamaica Center (Parsons/Archer), Queens, and Broad St, Manhattan. During weekdays, Trains going to Manhattan run express in Brooklyn between Myrtle Av and Marcy Av from about 7 AM to 1 PM and from Manhattan from 1:30 PM and 8 PM. During weekday rush hours, trains provide skip-stop service. Skip-stop service means that some stations are served by J trains, some stations are served by the Z trains, and some stations are served by both J and Z trains. J/Z skip-stop service runs towards Manhattan from about 7 AM to 8:15 AM and from Manhattan from about 4:30 PM to 5:45 PM.",http://www.mta.info/nyct/service/pdf/tjcur.pdf,996633,
+
 	<li>
 		<h2>
-			
+			L, 14 St-Canarsie Local
 		</h2>
 		<p>
-			
+			Trains operate between 8 Av/14 St, Manhattan, and Rockaway Pkwy/Canarsie, Brooklyn, 24 hours daily.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tlcur.pdf">Learn More</a>
 	</li>
-L, 14 St-Canarsie Local,1,"Trains operate between 8 Av/14 St, Manhattan, and Rockaway Pkwy/Canarsie, Brooklyn, 24 hours daily.",http://www.mta.info/nyct/service/pdf/tlcur.pdf,A7A9AC,
+
 	<li>
 		<h2>
-			
+			M, QNS BLVD-6th AVE/ Myrtle Local
 		</h2>
 		<p>
-			
+			Trains operate between Middle Village-Metropolitan Avenue, Queens and Myrtle Avenue, Brooklyn at all times. Service is extended weekdays (except late nights) Continental Ave, Queens, All trains provide local service.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tmcur.pdf">Learn More</a>
 	</li>
-M, QNS BLVD-6th AVE/ Myrtle Local,1,"Trains operate between Middle Village-Metropolitan Avenue, Queens and Myrtle Avenue, Brooklyn at all times. Service is extended weekdays (except late nights) Continental Ave, Queens, All trains provide local service.",http://www.mta.info/nyct/service/pdf/tmcur.pdf,FF6319,
+
 	<li>
 		<h2>
-			
+			N, Broadway Express
 		</h2>
 		<p>
-			
+			Trains operate from Ditmars Boulevard, Queens, to Stillwell Avenue, Brooklyn, at all times. N trains in Manhattan operate along Broadway and across the Manhattan Bridge to and from Brooklyn. Trains in Brooklyn operate along 4th Avenue, then through Borough Park to Gravesend. Trains typically operate local in Queens, and either express or local in Manhattan and Brooklyn, depending on the time. Late night trains operate via Whitehall Street, Manhattan. Late night service is local.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tncur.pdf">Learn More</a>
 	</li>
-N, Broadway Express,1,"Trains operate from Ditmars Boulevard, Queens, to Stillwell Avenue, Brooklyn, at all times. N trains in Manhattan operate along Broadway and across the Manhattan Bridge to and from Brooklyn. Trains in Brooklyn operate along 4th Avenue, then through Borough Park to Gravesend. Trains typically operate local in Queens, and either express or local in Manhattan and Brooklyn, depending on the time. Late night trains operate via Whitehall Street, Manhattan. Late night service is local.",http://www.mta.info/nyct/service/pdf/tncur.pdf,FCCC0A,
+
 	<li>
 		<h2>
-			
+			Q, Broadway Express
 		</h2>
 		<p>
-			
+			Trains operate between Astoria, Queens, and Stillwell Av, Brooklyn except nights. During late nights trains will operate from 57th Street/7th Avenue, Manhattan, and Stillwell Av, Brooklyn. Trains operate express from 34th St. via Broadway to Canal Street, except late nights when trains operate express 34th to Canal(lower level), cross into Brooklyn via Manhattan Bridge, then operate local to and from Stillwell Av.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tqcur.pdf">Learn More</a>
 	</li>
-Q, Broadway Express,1,"Trains operate between Astoria, Queens, and Stillwell Av, Brooklyn except nights. During late nights trains will operate from 57th Street/7th Avenue, Manhattan, and Stillwell Av, Brooklyn. Trains operate express from 34th St. via Broadway to Canal Street, except late nights when trains operate express 34th to Canal(lower level), cross into Brooklyn via Manhattan Bridge, then operate local to and from Stillwell Av.",http://www.mta.info/nyct/service/pdf/tqcur.pdf,FCCC0A,
 	<li>
 		<h2>
-			
+			R, Broadway Local
 		</h2>
 		<p>
-			
+			Trains operate local between Forest Hills-71 Av, Queens, and 95 St/4 Av, Brooklyn, at all times except late nights. During late nights, trains operate only in Brooklyn between 36 St and 95 St/4 Av.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/trcur.pdf">Learn More</a>
 	</li>
-R, Broadway Local,1,"Trains operate local between Forest Hills-71 Av, Queens, and 95 St/4 Av, Brooklyn, at all times except late nights. During late nights, trains operate only in Brooklyn between 36 St and 95 St/4 Av.",http://www.mta.info/nyct/service/pdf/trcur.pdf,FCCC0A,
 	<li>
 		<h2>
-			
+			Z, Nassau St Express
 		</h2>
 		<p>
-			
+			During weekday rush hours, J and Z trains provide skip-stop service. Skip-stop service means that some stations are served by J trains, some stations are served by the Z trains, and some stations are served by both J and Z trains. J/Z skip-stop service runs towards Manhattan from about 7 AM to 8:15 AM and from Manhattan from about 4:30 PM to 5:45 PM.
 		</p>
-		<a href="">Learn More</a>
+		<a href="http://www.mta.info/nyct/service/pdf/tjcur.pdf">Learn More</a>
 	</li>
-Z, Nassau St Express,1,"During weekday rush hours, J and Z trains provide skip-stop service. Skip-stop service means that some stations are served by J trains, some stations are served by the Z trains, and some stations are served by both J and Z trains. J/Z skip-stop service runs towards Manhattan from about 7 AM to 8:15 AM and from Manhattan from about 4:30 PM to 5:45 PM.”http://www.mta.info/nyct/service/pdf/tjcur.pdf,996633,
+</ul>
+</body>
+</html>
+
+
